--- a/models/Prototype_DNN_on_Inverse_Dynamics.ipynb
+++ b/models/Prototype_DNN_on_Inverse_Dynamics.ipynb
@@ -5,9 +5,13 @@
     "colab": {
       "name": "DNN on Inverse Dynamics.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "-9pH9fCM10QA",
+        "FRTK_pz9HHiz",
+        "khB7eaPf19Hc"
+      ],
       "mount_file_id": "11cGx58Sx0wgCnfbI8OtXB9MjbtSKe_4G",
-      "authorship_tag": "ABX9TyPm8p0sJm8xeETW06gpzl+O",
+      "authorship_tag": "ABX9TyPhMSTmOLMrPn2mvdGNTm6f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +29,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/vipulSharma18/Push-Recovery-using-Deep-Q-Learning/blob/main/models/Prototype_DNN_on_Inverse_Dynamics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-9pH9fCM10QA"
+      },
+      "source": [
+        "# Module Import and Dataset Loading"
       ]
     },
     {
@@ -912,6 +925,82 @@
       "cell_type": "code",
       "metadata": {
         "id": "gCeQ4zwAaWM8"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ARcKPWCD1yHJ"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "khB7eaPf19Hc"
+      },
+      "source": [
+        "# Model Loading Test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "43Aw7jds1--y"
+      },
+      "source": [
+        "model = tf.keras.models.load_model('T1Model')"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qdk2n7tA2KQ6",
+        "outputId": "c1e91e51-8d8b-45ca-9d4b-731b64f750ae"
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_3\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "dense_9 (Dense)              (None, 16)                176       \n",
+            "_________________________________________________________________\n",
+            "dense_10 (Dense)             (None, 2)                 34        \n",
+            "_________________________________________________________________\n",
+            "dense_11 (Dense)             (None, 1)                 3         \n",
+            "=================================================================\n",
+            "Total params: 213\n",
+            "Trainable params: 213\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nCfMR1ry2Lkt"
       },
       "source": [
         ""
